<resources>
    <string name="app_name">Laptopku</string>
    <string name="cari_laptop">Cari Laptop</string>
    <string name="rilis_terbaru">Rilis Terbaru</string>
    <string name="kategori">Kategori</string>
    <string name="gaming">Gaming</string>
    <string name="profesional">Profesional</string>
    <string name="pelajar">Pelajar</string>
    <string name="workstation">Workstation</string>
    <string name="brand">Brand</string>
    <string name="telusuri">Telusuri</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="bandingkan">Bandingkan</string>
    <string name="urutkan">Urutkan</string>
    <string name="filter">Filter</string>
    <string name="berapa_budget_kamu">Berapa Budget Kamu?</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="asus_tuf_fx506ii">ASUS TUF FX506II</string>
    <string name="_1_7k">1.7k</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="acer">Acer</string>
    <string name="asus">Asus</string>
    <string name="hp">HP</string>
    <string name="msi">MSI</string>
    <string name="lenovo">Lenovo</string>
    <string name="buka_laptop_favorit">Buka laptop favorit.</string>
    <string name="buka_kategori_laptop_gaming">Buka kategori laptop gaming.</string>
    <string name="buka_kategori_laptop_profesional">Buka kategori laptop profesional.</string>
    <string name="buka_laptop_kategori_pelajar">Buka laptop kategori pelajar.</string>
    <string name="buka_laptop_kategori_workstation">Buka laptop kategori workstation.</string>
    <string name="buka_laptop_brand_acer">Buka laptop brand Acer.</string>
    <string name="buka_laptop_brand_asus">Buka laptop brand Asus.</string>
    <string name="buka_laptop_brand_hp">Buka laptop brand HP</string>
    <string name="buka_laptop_brand_lenovo">Buka laptop brand Lenovo.</string>
    <string name="buka_laptop_brand_msi">Buka laptop brand MSI.</string>
    <string name="layar_telusuri">Layar telusuri.</string>
    <string name="layar_rekomendasi">Layar rekomendasi.</string>
    <string name="layar_bandingkan">Layar bandingkan.</string>
    <string name="kembali_ke_layar_sebelumnya">Kembali ke layar sebelumnya.</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="favorit">Favorit</string>
    <string name="bandingkan_laptop">Bandingkan laptop.</string>
    <string name="apa_keperluan_kamu">Apa Keperluan Kamu?</string>
    <string name="membuat_grafis_2d">Membuat grafis 2D</string>
    <string name="melakukan_kalkulasi_rumit">Melakukan kalkulasi rumit</string>
    <string name="bermain_game_berat">Bermain game berat</string>
    <string name="membuat_grafis_3d">Membuat grafis 3D</string>
    <string name="editing_video_animasi">Editing video/animasi</string>
    <string name="pekerjaan_ringan_saja">Pekerjaan ringan saja</string>
    <string name="utamakan_performa_n_mungkin_lebih_berat_dan_tebal">Utamakan performa\n(Mungkin lebih berat dan tebal)</string>
    <string name="utamakan_portabilitas_n_mungkin_lebih_ringan_dan_tipis">Utamakan portabilitas\n(Mungkin lebih ringan dan tipis)</string>
    <string name="apa_prioritas_laptop_nyang_kamu_mau">Apa prioritas laptop\nyang kamu mau?</string>
    <string name="brand_apa_yang_kamu_mau">Brand apa yang kamu mau?</string>
    <string name="cpu">CPU</string>
    <string name="os">OS</string>
    <string name="layar">Layar</string>
    <string name="chipset">Chipset</string>
    <string name="grafis">Grafis</string>
    <string name="memori">Memori</string>
    <string name="penyimpanan">Penyimpanan</string>
    <string name="webcam">Webcam</string>
    <string name="keyboard">Keyboard</string>
    <string name="komunikasi">Komunikasi</string>
    <string name="audio">Audio</string>
    <string name="i_o_ports">I/O Ports</string>
    <string name="baterai">Baterai</string>
    <string name="ac_adapter">AC Adapter</string>
    <string name="dimensi">Dimensi</string>
    <string name="berat">Berat</string>
    <string name="paling_sesuai">Paling Sesuai</string>
    <string name="terbaru">Terbaru</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="performa">Performa</string>
    <string name="portabilitas">Portabilitas</string>
    <string name="harga">Harga</string>
    <string name="cari_laptop_dulu">Cari laptop dulu...</string>

</resources>