<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/brand_apa_yang_kamu_mau"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/acerCheckBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
        android:id="@+id/acerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/acer"
        android:textColor="#000000"
        android:textSize="18sp"
        android:buttonTint="@color/colorTint"
        app:layout_constraintBottom_toTopOf="@id/asusCheckBox"
        app:layout_constraintLeft_toLeftOf="@id/lenovoCheckBox"/>
    <CheckBox
        android:id="@+id/asusCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asus"
        android:textColor="#000000"
        android:textSize="18sp"
        android:buttonTint="@color/colorTint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/lenovoCheckBox"/>
    <CheckBox
        android:id="@+id/hpCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:buttonTint="@color/colorTint"
        app:layout_constraintLeft_toLeftOf="@id/lenovoCheckBox"
        app:layout_constraintTop_toBottomOf="@id/asusCheckBox"/>
    <CheckBox
        android:id="@+id/lenovoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lenovo"
        android:textColor="#000000"
        android:textSize="18sp"
        android:buttonTint="@color/colorTint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hpCheckBox" />
    <CheckBox
        android:id="@+id/msiCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/msi"
        android:textColor="#000000"
        android:textSize="18sp"
        android:buttonTint="@color/colorTint"
        app:layout_constraintLeft_toLeftOf="@id/lenovoCheckBox"
        app:layout_constraintTop_toBottomOf="@id/lenovoCheckBox"/>
</androidx.constraintlayout.widget.ConstraintLayout>