<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="2dp"
    android:background="#FFFFFF"
    android:elevation="24dp">

    <!-- menu Telusuri -->
    <ImageView
        android:id="@+id/bandingkanFooterTelusuriImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="40dp"
        android:src="@drawable/ic_telusuri_abu"
        android:contentDescription="@string/layar_telusuri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telusuri"
        android:textColor="#969696"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/bandingkanFooterTelusuriImageView"
        app:layout_constraintLeft_toLeftOf="@id/bandingkanFooterTelusuriImageView"
        app:layout_constraintRight_toRightOf="@id/bandingkanFooterTelusuriImageView"/>

    <!-- menu Rekomendasi -->
    <ImageView
        android:id="@+id/bandingkanFooterRekomendasiImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_rekomendasi_abu"
        android:contentDescription="@string/layar_rekomendasi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bandingkanFooterTelusuriImageView"
        app:layout_constraintRight_toLeftOf="@id/bandingkanFooterBandingkanImageView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rekomendasi"
        android:textColor="#969696"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/bandingkanFooterRekomendasiImageView"
        app:layout_constraintLeft_toLeftOf="@id/bandingkanFooterRekomendasiImageView"
        app:layout_constraintRight_toRightOf="@id/bandingkanFooterRekomendasiImageView"/>

    <!-- menu Bandingkan -->
    <ImageView
        android:id="@+id/bandingkanFooterBandingkanImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/ic_bandingkan_biru"
        android:contentDescription="@string/layar_bandingkan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandingkan"
        android:textColor="#330099"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/bandingkanFooterBandingkanImageView"
        app:layout_constraintLeft_toLeftOf="@id/bandingkanFooterBandingkanImageView"
        app:layout_constraintRight_toRightOf="@id/bandingkanFooterBandingkanImageView"/>
</androidx.constraintlayout.widget.ConstraintLayout>