<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/apaKeperluanKamuTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/apa_keperluan_kamu"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@id/bermainGameBeratCheckBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
        android:id="@+id/bermainGameBeratCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/bermain_game_berat"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/melakukanKalkulasiRumitCheckBox"
        app:layout_constraintLeft_toLeftOf="@id/melakukanKalkulasiRumitCheckBox"/>
    <CheckBox
        android:id="@+id/melakukanKalkulasiRumitCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/melakukan_kalkulasi_rumit"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/membuatGrafis2DCheckBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
        android:id="@+id/membuatGrafis2DCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membuat_grafis_2d"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/melakukanKalkulasiRumitCheckBox"/>
    <CheckBox
        android:id="@+id/membuatGrafis3DCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/membuat_grafis_3d"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/melakukanKalkulasiRumitCheckBox"
        app:layout_constraintTop_toBottomOf="@id/membuatGrafis2DCheckBox"/>
    <CheckBox
        android:id="@+id/editingVideoAnimasiCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/editing_video_animasi"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/melakukanKalkulasiRumitCheckBox"
        app:layout_constraintTop_toBottomOf="@id/membuatGrafis3DCheckBox" />
    <CheckBox
        android:id="@+id/pekerjaanRinganSajaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pekerjaan_ringan_saja"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/melakukanKalkulasiRumitCheckBox"
        app:layout_constraintTop_toBottomOf="@id/editingVideoAnimasiCheckBox"/>

    <!-- button sebelum dan selanjutnya -->
    <!-- untuk sebelumnya -->
    <LinearLayout
        android:id="@+id/keperluanFragmentSebelumnyaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_button_biru"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/keperluanFragmentSelanjutnyaButton">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_sebelumnya"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sebelumnya"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </LinearLayout>

    <!-- untuk selanjutnya -->
    <LinearLayout
        android:id="@+id/keperluanFragmentSelanjutnyaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_button_biru"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/keperluanFragmentSebelumnyaButton"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selanjutnya"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:src="@drawable/ic_selanjutnya"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>