<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp"
    android:paddingHorizontal="24dp"
    android:background="#330099"
    android:elevation="4dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!-- Tombol Back -->
    <ImageView
        android:id="@+id/headerKembaliImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_kembali"
        android:contentDescription="@string/kembali_ke_layar_sebelumnya"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/headerCariLaptopAutoCompleteTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- EditText Cari Laptop -->
    <AutoCompleteTextView
        android:id="@+id/headerCariLaptopAutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:background="@drawable/bg_rounded_rectangle_putih"
        android:hint="@string/cari_laptop"
        android:textSize="18sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:imeOptions="actionSearch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/headerKembaliImageView"
        app:layout_constraintRight_toLeftOf="@id/headerFavoriteImageView"/>

    <!-- Tombol Favorit -->
    <ImageView
        android:id="@+id/headerFavoriteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_favorite_putih"
        android:contentDescription="@string/buka_laptop_favorit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/headerCariLaptopAutoCompleteTextView"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>